# getitdone

./: README.md  pyproject.toml
src/getitdone/: __init__.py  cli.py  storage.py  tui.py
