[project]
name = "getitdone"
version = "0.1.0"
description = "A terminal todo app like git, with TUI using Textual"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "typer>=0.9.0",
]

[project.scripts]
getitdone = "getitdone.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/getitdone"]
